--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [pyrogram]
 api_id = 2040
 api_hash = b18441a1ff607e10a989891a5462e627
-db_url = db url
+db_url = mongodb://localhost:27017
 [plugins]
 root = plugins
