--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 .DS_Store
 .gitattributes
 .vscode
-/plugins/__pycache__/
+/modules/__pycache__/
 __pycache__/
 *.session
 *.session-journal
 /venv/
 /downloads/
-/plugins/custom_modules
+/modules/custom_modules
 .idea
 config.ini
 unknown_errors.txt
