Added sqlite3 database support, Moved config.ini to .env, Randomized main devs list (@john-phonk idea), Added .exnoedit command (@fuccsoc idea), logging in main.py

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,13 @@
 __pycache__/
 *.session
 *.session-old
-*.session-journal
+*.db
+*.sqlite3
+*-journal
 /venv/
 /downloads/
 /modules/custom_modules
 .idea
 config.ini
 unknown_errors.txt
+.env
