--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,13 @@
 .DS_Store
 .gitattributes
 .vscode
-/modules/__pycache__/
+/plugins/__pycache__/
 __pycache__/
 *.session
-*.session-old
-*.db
-*.sqlite3
-*-journal
+*.session-journal
 /venv/
 /downloads/
-/modules/custom_modules
+/plugins/custom_modules
 .idea
 config.ini
 unknown_errors.txt
-.env
