--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 pyrogram
 tgcrypto
+wikipedia
+covid
 wheel
+gTTS
 pygments
 ffmpeg-python
 pymongo
+motor
 Pillow>=9.0.0
 pytube
 click
 pymongo[srv]
 dnspython
-requests
-environs
-GitPython
