--- a/.github/workflows/check-black.yml
+++ b/.github/workflows/check-black.yml
@@ -2,15 +2,13 @@ name: Check code for Black style
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "*" ]
   pull_request:
     branches: [ master ]
 
 jobs:
   check:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.10
