Rewrite loader logic, add load_module and unload_module functions, update main.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 pyrogram==1.4.16
 tgcrypto
+
+pymongo[srv]
+motor
+dnspython
+aiosqlite
+
+requests
+aiohttp
+
+environs
+
+GitPython
+
 wheel
 pygments
 ffmpeg-python
-pymongo
 Pillow>=9.0.0
 pytube
 click
-pymongo[srv]
-dnspython
-requests
-environs
-GitPython
